# relay-cli

./: .gitignore  Cargo.toml  LICENSE  PI_MONO_LEARNINGS.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/skills/: security-review.md
assets/themes/: amber.json  dark.json  light.json  theme-schema.json
src/: errors.rs  lib.rs  main.rs
src/artifacts/: mod.rs
src/bridge/: agent.rs  chat_log.rs  claude_backend.rs  codex_backend.rs  compaction.rs  conversation.rs  editor.rs  events.rs  html_export.rs  markdown.rs  mod.rs  openai_client.rs  persist.rs  print_mode.rs  session_picker.rs  slash.rs  tui_chat.rs  worker.rs
src/ci/: mod.rs
src/cli/: commands.rs  mod.rs
src/commit/: mod.rs
src/config/: default_config.toml  mod.rs
src/e2e/: mod.rs
src/git/: mod.rs
src/handoff/: mod.rs
src/process/: mod.rs
src/provider/: claude.rs  codex.rs  cursor.rs  mod.rs  shell.rs
src/review/: mod.rs
src/schema/: types.rs
src/session/: mod.rs
src/skills/: loader.rs  mod.rs  registry.rs
src/storage/: migrations.rs  mod.rs
src/testing/: mod.rs
src/tui/: actions.rs  app.rs  data.rs  events.rs  mod.rs  state.rs  theme.rs
src/tui/screens/: artifacts.rs  logs.rs  mod.rs  overview.rs  reviews.rs  sessions.rs
src/tui/theme/: loader.rs  mod.rs  tokens.rs
src/tui/widgets/: chrome.rs  log_view.rs  mod.rs  table.rs
tests/: cli_print_mode.rs  cli_tests.rs  tui_tests.rs
