[package]
name = "relay-cli"
version = "0.1.0"
edition = "2021"
description = "Local agent harness CLI orchestrating Claude Code, Codex, Cursor, and utility agents"
license = "MIT"

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs and timestamps
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Paths
camino = { version = "1", features = ["serde1"] }

# Misc
regex = "1"
shell-words = "1"
which = "7"
console = "0.15"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json", "toml"] }
