[package]
name = "relay-cli"
version = "0.1.0"
edition = "2021"
description = "Local agent harness CLI orchestrating Claude Code, Codex, Cursor, and utility agents"
license = "MIT"

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs and timestamps
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Paths
camino = { version = "1", features = ["serde1"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Misc
regex = "1"
shell-words = "1"
which = "7"
console = "0.15"
dialoguer = "0.11"
# Clipboard — used by the `/copy` slash command to put the last assistant
# message on the system clipboard. Small (~2.5k lines), actively maintained
# (1Password), and cross-platform (X11/Wayland/macOS/Windows).
arboard = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json", "toml"] }
